マークアップ途中でいったんコミット

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="ともに働き、ともに育てよう。ひとつの”村”のようなこの場所で。豊島区大塚の「こそだてビレッジ」では、新たな託児会員を募集しています。未就園児（１～３歳）の保育士による託児と、シェアスペースをご利用いただけます。">
-  <title>【急募】こそだてビレッジ新メンバー｜RYOZANPARK大塚　こそだてビレッジ</title>
+  <title>【急募】こそだてビレッジ新メンバー JOIN US!｜RYOZANPARK大塚　こそだてビレッジ</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -14,7 +14,9 @@
     <div class="header_var">
 
       <!--RYOZAN logo-->
-      <a class="header_rlogo" href="###"></a>
+      <a class="header_rlogo" href="http://ryozanpark.jp/" target="_blank">
+        <img src="img/header_rlogo.png" alt="RYOZAN PARK">
+      </a>
       <!--./RYOZAN logo-->
 
       <!--SP_nav-->
@@ -26,14 +28,70 @@
     <!--PC_nav-->
     <div class="header_menu">
       <ul class="header_menu_inner">
-        <li><a href="###">WANTED</a></li>
+        <li><a href="#wanted">WANTED</a></li>
+        <li><a href="#system">SYSTEM</a></li>
+        <li><a href="#photos">PHOTOS</a></li>
+        <li><a href="#concept">CONCEPT</a></li>
+        <li><a href="#info">INFO&CONTACT</a></li>
       </ul>
     </div>
     <!-- ./PC_nav-->
-  </header>
-  <!-- ./HEADER -->
+
+  </header><!-- ./HEADER -->
 
   <!-- CONTENTS -->
+
+  <div id="top" class="contents">
+    <div class="contents_inner">
+
+      <div class="contents_img">
+        <h1><img src="img/" alt="【急募】こそだてビレッジ　新メンバー　JOIN US!"></h1>
+      </div>
+
+      <div class="contents_section">
+        <section class="sec_welcome" id="welcome">
+          <h2 class="sec_welcome_leadtxt-big">ともに働き、ともに育てよう。ひとつの”村”のようなこの場所で。</h2>
+          <h3 class="sec_welcome_leadtxt-mid">こそだてビレッジでは、新たな託児会員を募集しています！</h3>
+          <p>山手線の大塚駅からほど近くにあるシェアオフィス、「RYOZAN PARK大塚」。<br />
+その７階に、＜こそだて＞と＜仕事＞を両立したい親子のための託児施設・「こそだてビレッジ」はあります。<br />
+ビレッジがスタートしたのは2015年1月。それから2年、「拡大家族」というコンセプトのもと、たくさんのファミリーが子育ての喜びや苦労を共に味わいながら、まさに”村（village）”のように温かいコミュニティを形成してきました。<br />
+そして、この7月から、「こそだてビレッジ」は新たな	サービスとともに生まれ変わりました。<br />
+それに伴い、新しい保育サービスをご利用いただく、【１～３歳のお子さま】＆【親御さま】の新規メンバーを大募集します。</p>
+
+          <div class="btn_contact btn"><a href="http://ryozanpark.jp/contact/contactus/" target="_blank">お問い合わせ・見学お申込み</a></div>
+
+          <ul class="sec_welcome_badgeList">
+            <li class="sec_welcome_badgeList_item"><img src="img/img_sec_welcome_badgeList_item.png" alt="7月中は登録手数料無料！"></li>
+            <li class="sec_welcome_badgeList_item"><img src="img/img_sec_welcome_badgeList_item-2.png" alt="こだわりと安心の少人数保育"></li>
+          </ul>
+
+        </section><!--./sec_wanted-->
+
+        <section class="sec_wanted" id="wanted">
+            <h2 class="sec_title">WANTED</h2>
+            <h3 class="sec_title-cap">こんな方を募集しています(パパの利用も大歓迎！）</h3>
+
+            <div class="sec_wanted_typeList">
+              <ul class="sec_wanted_typeList_inner">
+                <li class="sec_wanted_typeList_item">
+                  <h4 class="sec_wanted_typeList_item_title">3歳※までのお子様の託児を希望の方</h4>
+                  <div class="sec_wanted_typeList_item_img"><img src="img/img_wanted-1.png"></div>
+                </li>
+              </ul>
+            </div>
+
+        </section>
+
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+
+
 
 </body>
 </html>
