--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
 
 
 
-
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="sample.js">
 
 </body>
 </html>
