js以外できたー！！！

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <section class="sec_welcome" id="welcome">
           <h2 class="sec_welcome_leadtxt-big">ともに働き、ともに育てよう。<br />ひとつの”村”のようなこの場所で。</h2>
-          <h3 class="sec_welcome_leadtxt-mid"><span>こそだてビレッジでは、新たな託児会員を募集しています！</span></h3>
+          <h3 class="sec_welcome_leadtxt-mid"><span class="autobr">こそだてビレッジでは、</span><span class="autobr">新たな託児会員を募集しています！</span></h3>
           <p class="sec_welcome_p">山手線の大塚駅からほど近くにあるシェアオフィス、「RYOZAN PARK大塚」。<br />
 その７階に、＜こそだて＞と＜仕事＞を両立したい親子のための託児施設・「こそだてビレッジ」はあります。<br />
 ビレッジがスタートしたのは2015年1月。それから2年、「拡大家族」というコンセプトのもと、たくさんのファミリーが子育ての喜びや苦労を共に味わいながら、まさに”村（village）”のように温かいコミュニティを形成してきました。<br />
@@ -99,7 +99,7 @@
                   <div class="sec_wanted_typeList_item_img"><img src="img/img_wanted-3.png"></div>
                 </li>
                 <li class="sec_wanted_typeList_item">
-                  <h4 class="sec_wanted_typeList_item_title">リモートワークで<br />働きたい方</h4>
+                  <h4 class="sec_wanted_typeList_item_title"><span class="autobr">リモートワークで</span><span class="autobr">働きたい方</span></h4>
                   <div class="sec_wanted_typeList_item_img"><img src="img/img_wanted-4.png"></div>
                 </li>
               </ul>
@@ -185,7 +185,9 @@
               </address>
 
               <div class="sec_contact_mapBlock">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12955.291244625503!2d139.726832!3d35.730576!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d714c8d732f%3A0x37ac01046e8ab51b!2z5pel5pysLCDjgJIxNzAtMDAwNSDmnbHkuqzpg73osYrls7bljLrljZflpKfloZrvvJPkuIHnm67vvJPvvJbiiJLvvJc!5e0!3m2!1sja!2sjp!4v1499924383619" width="488" height="330" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="iframeWrap">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12955.291244625503!2d139.726832!3d35.730576!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d714c8d732f%3A0x37ac01046e8ab51b!2z5pel5pysLCDjgJIxNzAtMDAwNSDmnbHkuqzpg73osYrls7bljLrljZflpKfloZrvvJPkuIHnm67vvJPvvJbiiJLvvJc!5e0!3m2!1sja!2sjp!4v1499924383619" width="488" height="330" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
               </div>
             </div>
 
