--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li class="header_menu_inner_item"><a href="#system">SYSTEM</a></li>
         <li class="header_menu_inner_item"><a href="#photos">PHOTOS</a></li>
         <li class="header_menu_inner_item"><a href="#concept">CONCEPT</a></li>
-        <li class="header_menu_inner_item"><a href="#info">CONTACT US</a></li>
+        <li class="header_menu_inner_item"><a href="#contact">CONTACT US</a></li>
       </ul>
     </div>
     <!-- ./PC_nav-->
@@ -217,6 +217,36 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/common.js"></script>
+
+
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-28523112-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();</script>
+
+    <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 955782925;
+    var google_custom_params = window.google_tag_params;
+    var google_remarketing_only = true;
+    /* ]]> */
+    </script>
+
+    <script type="text/javascript"
+    src="//www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+    <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt=""
+    src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/955782925/?value=0&amp;guid=ON&amp;script=0"/>
+    </div>
+    </noscript>
+
 
 </body>
 </html>
